--- a/kitsu-mod.user.css
+++ b/kitsu-mod.user.css
@@ -44,14 +44,13 @@
         max-width: 56%;
         width: auto;
     }
-    .embedly-card {
-        margin-left: 0;
-        margin-right: 0;
-    }
     .media--sidebar ul {
         font-size: 13px;
     }
     .media--feed {
         max-width: none;
+    }
+    .footer-applinks {
+        margin-top: 20px;
     }
 }
