--- a/slack-hangouts-emoji.user.css
+++ b/slack-hangouts-emoji.user.css
@@ -10,6 +10,6 @@
 ==/UserStyle== */
 @-moz-document regexp("^https?:\/\/[^.]+\.slack\.com\/.*$") {
     .emoji-outer, .emoji[style*="sheet_google_64_indexed_256.png"] {
-        background-image: url("https://cdn.rawgit.com/stolksdorf/old-slack-emojis/74299ce54d8f9dde2190b5522e889d111aac6336/blob_sprite_64.png") !important;
+        background-image: url("https://cdn.jsdelivr.net/gh/stolksdorf/old-slack-emojis@74299ce54d8f9dde2190b5522e889d111aac6336/blob_sprite_64.png") !important;
     }
 }
