--- a/mal-flat/mal-flat.user.css
+++ b/mal-flat/mal-flat.user.css
@@ -595,19 +595,34 @@
         border-radius: 3px;
     }
     
-    h1, .page-common .h1
-    {
+    h1, .page-common .h1 {
         text-align: left;
         color: #fff !important;
         font-size: 13px !important;
         font-weight: normal !important;
-          border: 1px solid #363636 !important;
+        border: 1px solid #363636 !important;
         padding: 5px 9px;
         margin: 0;
-          height: 22px;
-          line-height: 22px;
-          background: #363636 repeat-x top right !important;
-          text-shadow: 0px 1px #000;
+        line-height: 22px;
+        background: #363636 !important;
+    }
+    .page-common .h1.edit-info {
+        display: flex;
+    }
+    .page-common .h1.edit-info span.h1-title,
+    .page-common .h1.edit-info div.h1-title {
+        display: block;
+        width: auto;
+    }
+    .page-common .h1.edit-info div.h1-title h1 {
+        display: inherit;
+        padding: 0;
+    }
+    .page-common .h1.edit-info div.header-right {
+        display: block;
+        width: auto;
+        margin-left: auto;
+        margin-right: 2px;
     }
     
     h1 span {
