exclude fontawesome from lint rule

--- a/mal-flat/mal-flat.user.css
+++ b/mal-flat/mal-flat.user.css
@@ -16,6 +16,7 @@
         font-family: 'Segoe UI', sans-serif !important;
     }
     .fa {
+        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
         font-family: FontAwesome !important;
     }
     body {
