lint all files for real this time

--- a/ann-mod.user.css
+++ b/ann-mod.user.css
@@ -9,7 +9,8 @@
 @license      Unlicense
 ==/UserStyle== */
 @-moz-document domain("animenewsnetwork.com") {
-    #canvas > div, #main {
+    #canvas > div,
+    #main {
         width: 1280px !important;
         margin: auto !important;
     }
