--- a/nyaa-mod.user.css
+++ b/nyaa-mod.user.css
@@ -24,7 +24,7 @@
         font-weight: bold;
     }
     body.dark [style="color: red;"] {
-        color: #cc6666 !important;
+        color: #c66 !important;
         font-weight: bold;
     }
     body.dark .table-hover > tbody > tr:hover {
@@ -45,7 +45,7 @@
     }
     body.dark .form-control:focus {
         border-color: #5f89ac;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(95,137,172,.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(95, 137, 172, 0.6);
     }
     body > .container {
         margin-top: 71px;
@@ -61,17 +61,17 @@
 }
 @-moz-document domain("sukebei.nyaa.si") {
     body.dark a {
-        color: #cc6666 !important;
+        color: #c66 !important;
     }
     body.dark a:hover {
         color: #c82829 !important;
     }
     body.dark table a:visited {
-        color: #993333 !important;
+        color: #933 !important;
     }
     body.dark .btn-primary {
-        background-color: #cc6666;
-        border-color: #cc6666;
+        background-color: #c66;
+        border-color: #c66;
     }
     body.dark .btn-primary:active,
     body.dark .btn-primary:focus,
@@ -81,6 +81,6 @@
     }
     body.dark .form-control:focus {
         border-color: #c82829;
-        box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(200,40,41,.6);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(200, 40, 41, 0.6);
     }
 }
