--- a/anilist-mod.user.css
+++ b/anilist-mod.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         Anilist Mod
 @namespace    https://github.com/synthtech
-@version      1.0.1
+@version      1.0.2
 @description  Custom stuff
 @author       synthtech (https://github.com/synthtech)
 @homepageURL  https://github.com/synthtech/usercss
@@ -25,7 +25,6 @@
     .favourites .favourite.studio {
         background-color: unset;
     }
-
     /* home sidebar */
     .home .list-preview-wrap:nth-child(2), /* anime list */
     .home .list-preview-wrap:nth-child(3), /* manga list */
@@ -34,7 +33,6 @@
     .home .recent-reviews + div > div:first-of-type { /* trending */
         display: none;
     }
-
     /* larger profile feed activites */
     .activity-feed[data-v-09492909] {
         grid-template-columns: 1fr;
@@ -52,14 +50,17 @@
         grid-column-start: unset;
         grid-column-end: unset;
     }
-    /* larger home feed activites */
+    /* larger home/media feed activites */
     .list[data-v-6c3dc0b8] {
         grid-template-columns: 100px auto;
         min-height: 150px;
     }
     .list .details[data-v-6c3dc0b8] {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        margin: auto 0;
+    }
+    .list .donator-badge[data-v-6c3dc0b8] {
+        position: unset;
+        vertical-align: middle;
+        margin-top: -3px;
     }
 }
