only show airing in sidebar
when there's not enough airing shows the section does not exist

--- a/anilist-mod.user.css
+++ b/anilist-mod.user.css
@@ -21,7 +21,7 @@
     }
     /* home sidebar */
     .home {
-        .list-preview-wrap:nth-child(2), /* manga list */
+        .list-preview-wrap:nth-child(n+2),
         .recent-threads,
         .recent-reviews,
         .recent-reviews + div > div:first-of-type { /* trending */
