--- a/nyaa-mod.user.css
+++ b/nyaa-mod.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name         Nyaa Mod
 @namespace    https://github.com/synthtech
-@version      1.0.1
+@version      1.0.2
 @description  Dark mode adjustments
 @author       synthtech (https://github.com/synthtech)
 @homepageURL  https://github.com/synthtech/usercss
@@ -45,7 +45,7 @@
     }
     body.dark .form-control:focus {
         border-color: #5f89ac;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(95, 137, 172, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0 0 0 / 7.5%), 0 0 8px rgba(95 137 172 / 60%);
     }
     body > .container {
         margin-top: 71px;
@@ -81,6 +81,6 @@
     }
     body.dark .form-control:focus {
         border-color: #c82829;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(200, 40, 41, 0.6);
+        box-shadow: inset 0 1px 1px rgba(0 0 0 / 7.5%), 0 0 8px rgba(200 40 41 / 60%);
     }
 }
