--- a/anilist-mod.user.css
+++ b/anilist-mod.user.css
@@ -1,11 +1,9 @@
 /* ==UserStyle==
 @name         Anilist Mod
-@namespace    https://github.com/synthtech
+@namespace    https://github.com
 @version      2.1.2
 @description  Personal changes for Anilist
-@author       synthtech (https://github.com/synthtech)
-@homepageURL  https://github.com/synthtech/usercss
-@supportURL   https://github.com/synthtech/usercss/issues
+@author       Zarin
 @license      Unlicense
 @preprocessor less
 ==/UserStyle== */
