--- a/ann-mod.user.css
+++ b/ann-mod.user.css
@@ -1,11 +1,9 @@
 /* ==UserStyle==
 @name         ANN Mod
-@namespace    https://github.com/synthtech
+@namespace    https://github.com
 @version      1.0.0
 @description  Ad fixes
-@author       synthtech (https://github.com/synthtech)
-@homepageURL  https://github.com/synthtech/usercss
-@supportURL   https://github.com/synthtech/usercss/issues
+@author       Zarin
 @license      Unlicense
 ==/UserStyle== */
 @-moz-document domain("animenewsnetwork.com") {
