--- a/amazon-mod.user.css
+++ b/amazon-mod.user.css
@@ -1,11 +1,9 @@
 /* ==UserStyle==
 @name         Amazon Mod
-@namespace    https://github.com/synthtech
+@namespace    https://github.com
 @version      1.2.0
 @description  Hides promotional elements
-@author       synthtech (https://github.com/synthtech)
-@homepageURL  https://github.com/synthtech/usercss
-@supportURL   https://github.com/synthtech/usercss/issues
+@author       Zarin
 @license      Unlicense
 ==/UserStyle== */
 @-moz-document regexp("^https:\/\/www\.amazon\.[a-z]{2,3}(\.[a-z]{2,3})?\/.*$") {
