--- a/nyaa-mod.user.css
+++ b/nyaa-mod.user.css
@@ -1,11 +1,9 @@
 /* ==UserStyle==
 @name         Nyaa Mod
-@namespace    https://github.com/synthtech
+@namespace    https://github.com
 @version      1.0.2
 @description  Dark mode adjustments
-@author       synthtech (https://github.com/synthtech)
-@homepageURL  https://github.com/synthtech/usercss
-@supportURL   https://github.com/synthtech/usercss/issues
+@author       Zarin
 @license      Unlicense
 ==/UserStyle== */
 @-moz-document domain("nyaa.si") {
