--- a/anilist-mod.user.css
+++ b/anilist-mod.user.css
@@ -4,7 +4,7 @@
 @version      2.1.2
 @description  Personal changes for Anilist
 @author       Zarin
-@license      Unlicense
+@license      0BSD
 @preprocessor less
 ==/UserStyle== */
 @-moz-document domain("anilist.co") {
