--- a/ann-mod.user.css
+++ b/ann-mod.user.css
@@ -4,7 +4,7 @@
 @version      1.0.0
 @description  Ad fixes
 @author       Zarin
-@license      Unlicense
+@license      0BSD
 ==/UserStyle== */
 @-moz-document domain("animenewsnetwork.com") {
     #canvas > div,
