--- a/nyaa-mod.user.css
+++ b/nyaa-mod.user.css
@@ -4,7 +4,7 @@
 @version      1.0.2
 @description  Dark mode adjustments
 @author       Zarin
-@license      Unlicense
+@license      0BSD
 ==/UserStyle== */
 @-moz-document domain("nyaa.si") {
     body.dark a {
